samples/_failures_safe/1761628928_405504_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_854f9cd9.c: In function ‘main’:
./samples/SAFE/__tmp_854f9cd9.c:154:9: error: expected declaration or statement at end of input
  154 |         if (entry_count >= MAX_ENTRIES) {
      |         ^~
./samples/SAFE/__tmp_854f9cd9.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_854f9cd9.c:154:9: error: expected declaration or statement at end of input
